fixed the issue in the swagger
