# docs/swagger.yaml
@@ -114,28 +114,6 @@ paths:
       tags:
       - Admin
   /blog:
-    delete:
-      consumes:
-      - application/json
-      description: Delete the post in the blog site
-      parameters:
-      - description: Post ID
-        in: path
-        name: id
-        required: true
-        type: string
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            $ref: '#/definitions/models.Response'
-      security:
-      - ApiKeyAuth: []
-      summary: Delete Posts
-      tags:
-      - Posts
     get:
       consumes:
       - application/json
@@ -177,6 +155,29 @@ paths:
       summary: Create Posts
       tags:
       - Posts
+  /blog/{id}:
+    delete:
+      consumes:
+      - application/json
+      description: Delete the post in the blog site
+      parameters:
+      - description: Post ID
+        in: path
+        name: id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/models.Response'
+      security:
+      - ApiKeyAuth: []
+      summary: Delete Posts
+      tags:
+      - Posts
     put:
       consumes:
       - application/json
@@ -206,28 +207,6 @@ paths:
       tags:
       - Posts
   /category:
-    delete:
-      consumes:
-      - application/json
-      description: Delete Category in the blog site
-      parameters:
-      - description: Category ID
-        in: path
-        name: id
-        required: true
-        type: string
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            $ref: '#/definitions/models.Response'
-      security:
-      - ApiKeyAuth: []
-      summary: Delete Category
-      tags:
-      - Category
     get:
       consumes:
       - application/json
@@ -267,6 +246,29 @@ paths:
       summary: Add Category
       tags:
       - Category
+  /category/{id}:
+    delete:
+      consumes:
+      - application/json
+      description: Delete Category in the blog site
+      parameters:
+      - description: Category ID
+        in: path
+        name: id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/models.Response'
+      security:
+      - ApiKeyAuth: []
+      summary: Delete Category
+      tags:
+      - Category
     put:
       consumes:
       - application/json
@@ -295,7 +297,7 @@ paths:
       summary: Update Category
       tags:
       - Category
-  /command:
+  /command/{id}:
     delete:
       consumes:
       - application/json
@@ -435,8 +437,8 @@ paths:
       produces:
       - application/json
       responses:
-        "200":
-          description: OK
+        "201":
+          description: Created
           schema:
             $ref: '#/definitions/models.Response'
       summary: User SignUp
